--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -4,15 +4,84 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-content>
 
-  <ion-navbar>
-    <ion-title>About</ion-title>
-  </ion-navbar>
+    <ion-row>
+        <ion-col>
+            <ion-card class="header-image-card ">
+                <img src="assets/img/flag-parade.jpg"/>
+                <div class="layover"></div>
+                <div class="card-title">MOBILITY FAIR</div>
+            </ion-card>
 
-</ion-header>
 
+        </ion-col>
+    </ion-row>
 
-<ion-content padding>
+    <ion-row responsive-sm>
+        <ion-col>
+            <ion-card>
+                <img src="assets/img/exhibitors.jpg"/>
+                <ion-card-content>
+                    <ion-card-title>
+                        For Exhibitors
+                    </ion-card-title>
+                    <p>
+                        The Mobility Fair of the AGM 2017 is the place where universities, companies and students get in
+                        touch
+                        with each other and talk about future jobs and future stays abroad. Every university with an ESN
+                        section, right now more than 500, presents itself to the students and provides information about
+                        possible ERASMUS placements and degree programmes. Furthermore companies and organisations will
+                        introduce internships and job placements for students and graduates.
+                    </p>
+
+                    <button ion-button icon-left clear>
+                        <ion-icon name="share"></ion-icon>
+                        More
+                    </button>
+                </ion-card-content>
+            </ion-card>
+        </ion-col>
+        <ion-col>
+
+            <ion-card>
+                <img src="assets/img/visitors.jpg"/>
+                <ion-card-content>
+                    <ion-card-title>
+                        For Visitors
+                    </ion-card-title>
+                    <p>You want to study abroad? You are looking for a job in another country? Find the perfect
+                        opportunity at
+                        our Mobility Fair!</p>
+                    <p>
+                        <strong>When:</strong> Friday, 21. April 2017 <br>
+                        <strong>Where:</strong> TU Berlin <br>
+                        <strong>Entry:</strong> free! <br>
+                        <br>
+                    </p>
+                    <p>The Mobility Fair of the AGM 2017 is the place where universities, companies and students get in
+                        touch
+                        with
+                        each other and talk about future jobs and future stays abroad. Every university with an ESN
+                        section,
+                        right
+                        now more than 500, presents itself to the students and provides information about possible
+                        ERASMUS
+                        placements and degree programmes. Furthermore companies and organisations will introduce
+                        internships and
+                        job placements for students and graduates.</p>
+                    <br>
+                    <p>Next to the different boothes we will provide interesting talks and workshops to get you ready
+                        for your
+                        future. So do not hesitate and take the first step to this unique opportunity.</p>
+
+                    <button ion-button icon-left clear>
+                        <ion-icon name="share"></ion-icon>
+                        More
+                    </button>
+                </ion-card-content>
+            </ion-card>
+        </ion-col>
+    </ion-row>
 
 </ion-content>
