--- a/src/pages/exhibitors/exhibitors.html
+++ b/src/pages/exhibitors/exhibitors.html
@@ -1,32 +1,28 @@
-<!--
-  Generated template for the Exhibitors page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-    <ion-navbar>
-        <ion-title>Exhibitors ({{filteredExhibitors?.length}})</ion-title>
-    </ion-navbar>
-
+    <ion-toolbar>
+        <ion-segment [(ngModel)]="typeFilter">
+            <ion-segment-button value="all">All</ion-segment-button>
+            <ion-segment-button value="esn">ESN</ion-segment-button>
+            <ion-segment-button value="partners">Partners</ion-segment-button>
+        </ion-segment>
+    </ion-toolbar>
 </ion-header>
 
-
 <ion-content>
+
     <ion-searchbar (ionInput)="filterItems($event)"></ion-searchbar>
     <div *ngFor="let exhibitor of filteredExhibitors; let i = index">
-        <ion-row *ngIf="i%4==0">
-            <ion-col>
+        <ion-row *ngIf="i%4==0" responsive-sm>
+            <ion-col *ngIf="isFiltered(exhibitor)">
                 <exhibitor-card [exhibitor]="filteredExhibitors[i]"></exhibitor-card>
             </ion-col>
-            <ion-col>
+            <ion-col *ngIf="isFiltered(exhibitor)">
                 <exhibitor-card [exhibitor]="filteredExhibitors[i+1]"></exhibitor-card>
             </ion-col>
-            <ion-col>
+            <ion-col *ngIf="isFiltered(exhibitor)">
                 <exhibitor-card [exhibitor]="filteredExhibitors[i+2]"></exhibitor-card>
             </ion-col>
-            <ion-col>
+            <ion-col *ngIf="isFiltered(exhibitor)">
                 <exhibitor-card [exhibitor]="filteredExhibitors[i+3]"></exhibitor-card>
             </ion-col>
         </ion-row>
