--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -4,18 +4,24 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
+<ion-header>
+    <ion-navbar>
+        <ion-title>Mobility Fair</ion-title>
+    </ion-navbar>
+</ion-header>
+
 <ion-content>
 
     <ion-row>
-        <ion-col>
-            <ion-card class="header-image-card ">
-                <img src="assets/img/flag-parade.jpg"/>
-                <div class="layover"></div>
-                <div class="card-title">MOBILITY FAIR</div>
-            </ion-card>
+        <!--<ion-col>-->
+            <!--<ion-card class="header-image-card ">-->
+                <!--<img src="assets/img/flag-parade.jpg"/>-->
+                <!--<div class="layover"></div>-->
+                <!--<div class="card-title">MOBILITY FAIR</div>-->
+            <!--</ion-card>-->
 
 
-        </ion-col>
+        <!--</ion-col>-->
     </ion-row>
 
     <ion-row responsive-sm>
