--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Programm" tabIcon="book"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Aussteller" tabIcon="people"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Program" tabIcon="book"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Exhibitors" tabIcon="people"></ion-tab>
 </ion-tabs>
