added partner list overview

--- a/App/src/pages/why-exhibitors/why-exhibitors.html
+++ b/App/src/pages/why-exhibitors/why-exhibitors.html
@@ -74,10 +74,10 @@
                         <span>{{"What kind of students will visit the Mobility Fair?"|trans}}</span>
                     </ion-card-title>
                     <p>
-                        <span>{{"We are expecting students from more than 500 higher education institutions from all over Europe. Students from Berlin, especially the FU Berlin, will also be attending."|trans}}</span>
+                        <span>{{"We are expecting students from more than 500 higher education institutions from all over Europe. Students from Berlin, especially the FU Berlin and TU Berlin, will also be attending."|trans}}</span>
                     </p>
                     <p>
-                        <span>{{"FU Berlin offers degrees in a variety of subjects, including:"|trans}}</span>
+                        <span>{{"FU and TU Berlin offer degrees in a variety of subjects, including:"|trans}}</span>
                     </p>
                     <ul>
                         <li>
@@ -85,6 +85,9 @@
                         </li>
                         <li>
                             <span>{{"earth sciences"|trans}}</span>
+                        </li>
+                        <li>
+                            <span>{{"Civil, Structural, Chemical, Mechanical, ... Engineering"|trans}}</span>
                         </li>
                         <li>
                             <span>{{"educational science and psychology"|trans}}</span>
@@ -123,6 +126,18 @@
                         </li>
                         <li><a href="http://www.fu-berlin.de/studium/studienangebot/grundstaendige/index.html"
                                target="_blank">Bachelor</a></li>
+                    </ul>
+                    <p>
+                        <span>{{"Find out more about the Bachelor and Master courses of the TU Berlin here:"|trans}}</span>
+                    </p>
+                    <ul>
+                        <li>
+                            <a href="http://www.studienberatung.tu-berlin.de/menu/courses_and_programs/bachelors_programs/parameter/en/" target="_blank">
+                            Bachelor</a>
+                        </li>
+                        <li>
+                            <a href="http://www.studienberatung.tu-berlin.de/menu/courses_and_programs/masters_programs/parameter/en/" target="_blank">Master</a>
+                        </li>
                     </ul>
 
 
