--- a/App/src/index.html
+++ b/App/src/index.html
@@ -16,13 +16,13 @@
     <!--<script src="cordova.js"></script>-->
 
     <!-- un-comment this code to enable service worker-->
-    <script>
-      if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('service-worker.js')
-          .then(() => console.log('service worker installed'))
-          .catch(err => console.log('Error', err));
-      }
-    </script>
+    <!--<script>-->
+      <!--if ('serviceWorker' in navigator) {-->
+        <!--navigator.serviceWorker.register('service-worker.js')-->
+          <!--.then(() => console.log('service worker installed'))-->
+          <!--.catch(err => console.log('Error', err));-->
+      <!--}-->
+    <!--</script>-->
 
     <link href="build/main.css" rel="stylesheet">
 
