--- a/App/src/pages/partners-page/partners-page.html
+++ b/App/src/pages/partners-page/partners-page.html
@@ -17,10 +17,12 @@
         <span>{{"Our Exhibitors"|trans}}</span>
     </h1>
 
-    <ion-row responsive-md wrap>
-        <ion-col *ngFor="let partner of partners">
+    <ion-row wrap justify-content-start no-padding>
+        <ion-col *ngFor="let partner of partners" col-12 col-sm-6 col-md-4 col-lg-4>
             <ion-card class="partner-card">
-                <img [src]="partner.imageUrl" (click)="goPartner(partner)" />
+                <div class="partner-logo-container">
+                    <img [src]="partner.imageUrl" (click)="goPartner(partner)" />
+                </div>
                 <ion-card-content>
                     <ion-card-title>
                         {{partner.name}}
