--- a/App/www/assets/snippets/movineurope.html
+++ b/App/www/assets/snippets/movineurope.html
@@ -1,27 +1,37 @@
-<h3 id="movin-europe-is-an-esn-initiative-to-promote-mobility."><strong>Mov'in Europe is an ESN initiative to promote mobility.</strong></h3>
+<h3 id="movin-europe-is-an-esn-initiative-to-promote-mobility."><strong>Mov'in Europe is an ESN initiative to promote
+    mobility.</strong></h3>
 <p>It is based on two ideas:</p>
 <ul class="incremental">
-    <li><blockquote>
-        <p>Mobility is a lifestyle that every young person should have the opportunity to embrace;</p>
-    </blockquote></li>
-    <li><blockquote>
-        <p>ESN and its volunteers can help young people to take the first step abroad.</p>
-    </blockquote></li>
+    <li>
+
+            <p>Mobility is a lifestyle that every young person should have the opportunity to embrace;</p>
+    </li>
+    <li>
+            <p>ESN and its volunteers can help young people to take the first step abroad.</p>
+    </li>
 </ul>
-<p>Young people don’t have access to the right information nor real life mobility stories to rely on. There are many barriers that need to be overcome (academic, linguistic, social and financial barriers). Our network of volunteers aims to organise <em><strong>Mov'in Europe</strong></em> activities meant to inform local students about mobility opportunities.</p>
-<p>With mobility projects, such as Erasmus+, European Voluntary Service, available internships and many other, there is a clear need expressed at the European level for the promotion of mobility. In 2014 the Erasmus Student Network decided to support these needs by creating an international project called <em>Mov'in Europe</em> and thus engaging its volunteers in actively spreading the message that <strong>mobility is a lifestyle. </strong></p>
+<p>Young people don’t have access to the right information nor real life mobility stories to rely on. There are many
+    barriers that need to be overcome (academic, linguistic, social and financial barriers). Our network of volunteers
+    aims to organise <em><strong>Mov'in Europe</strong></em> activities meant to inform local students about mobility
+    opportunities.</p>
+<p>With mobility projects, such as Erasmus+, European Voluntary Service, available internships and many other, there is
+    a clear need expressed at the European level for the promotion of mobility. In 2014 the Erasmus Student Network
+    decided to support these needs by creating an international project called <em>Mov'in Europe</em> and thus engaging
+    its volunteers in actively spreading the message that <strong>mobility is a lifestyle. </strong></p>
 <p>As a campaign on promotion of mobility, <em>Mov'in Europe</em> aims at different, but interlinked, objectives:</p>
 <ul class="incremental">
-    <li><blockquote>
+    <li>
         <p>raising mobility issues on the political agenda;</p>
-    </blockquote></li>
-    <li><blockquote>
+    </li>
+    <li>
         <p>providing more information on mobility opportunities for young people;</p>
-    </blockquote></li>
-    <li><blockquote>
+    </li>
+    <li>
         <p>encouraging the network to organise events and support the project.</p>
-    </blockquote></li>
+    </li>
 </ul>
-<p>The project will be implemented on all three levels of ESN, by organising events, such as mobility days, fairs, linguistic tandems, conferences and other.</p>
-<p>Please follow our online campaign through <a href="https://www.facebook.com/MovinEurope/">Facebook</a> and <a href="https://www.instagram.com/movineurope/">Instagram</a>.</p>
-<p>Meet the team and contact us <a href="http://movineurope.esn.org/about/contact">by clicking here</a>.</p>
+<p>The project will be implemented on all three levels of ESN, by organising events, such as mobility days, fairs,
+    linguistic tandems, conferences and other.</p>
+<p>Please follow our online campaign through <a href="https://www.facebook.com/MovinEurope/" target="_blank">Facebook</a> and <a
+        href="https://www.instagram.com/movineurope/" target="_blank">Instagram</a>.</p>
+<p>Meet the team and contact us <a href="http://movineurope.esn.org/about/contact" target="_blank">by clicking here</a>.</p>
